<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">
        <xliff:g>List to Excel</xliff:g>
    </string>
    <string name="export">Export</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="daily_job">Daily Job</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="welcome_message">
        Welcome\n
        to\n
        List to Excel
    </string>

    <string name="toast_message">
        Date: <b>%s</b>\n
        Daily Job: <b>%s</b>\n
        Workers: <b>%s</b>\n
        Price: <b>%s</b>\n
        Total price: <b>%s</b>\n
    </string>

    <string name="warning_message_fulfill"><b><big>Please Fulfill.</big></b></string>
    <string name="list">List</string>
    <string name="see_details">See Details</string>
    <string name="details">Details</string>
    <string name="btn_ok">OK</string>
</resources>