<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addViewModel" 
            type="com.example.listtoexcel.add.AddViewModel" />
    </data>

    <ScrollView
        style="@style/HeadLine2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="104dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                style="@style/HeadLine1"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_far_away_from_the_top"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                style="@style/HeadLine2"
                android:layout_width="@dimen/textView_width"
                android:layout_marginStart="16dp"
                android:text="@string/date"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextDate"
                app:layout_constraintEnd_toStartOf="@+id/editTextDate"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/HeadLine2"
                android:layout_width="100dp"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/daily_job"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextDailyJob"
                app:layout_constraintEnd_toStartOf="@+id/editTextDailyJob"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView3"
                style="@style/HeadLine2"
                android:layout_width="100dp"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/quantity"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextWorkers"
                app:layout_constraintEnd_toStartOf="@+id/editTextWorkers"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/HeadLine2"
                android:layout_width="100dp"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/price"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextPrice"
                app:layout_constraintEnd_toStartOf="@+id/editTextPrice"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/app_name"
                android:inputType="date"
                app:layout_constraintBottom_toTopOf="@+id/editTextDailyJob"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5"
                app:layout_constraintVertical_bias="0.32"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextDailyJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/app_name"
                android:inputType="textAutoComplete"
                app:layout_constraintBottom_toTopOf="@+id/editTextWorkers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextWorkers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/app_name"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/editTextPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDailyJob"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/app_name"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/btnExport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextWorkers"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/add"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnExport"
                app:layout_constraintEnd_toStartOf="@+id/btnExport"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnExport"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_textView_space"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/export"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>